Fix unreadable icon in text toolbar when tool option is selected. Fixes #336

--- a/css/apps/core/_text.scss
+++ b/css/apps/core/_text.scss
@@ -73,3 +73,8 @@
         opacity: 1 !important;
     }
 }
+
+.text-menubar .entry-action.is-active:not(.entry-action-item) .material-design-icon > svg,
+.text-menubar button.entry-action__button.is-active .material-design-icon > svg {
+	fill: var(--color-primary-text) !important;
+}
