--- a/css/server-automatic.css
+++ b/css/server-automatic.css
@@ -869,6 +869,10 @@
   .emoji-list .emoji-list__item {
     opacity: 1 !important;
   }
+  .text-menubar .entry-action.is-active:not(.entry-action-item) .material-design-icon > svg,
+  .text-menubar button.entry-action__button.is-active .material-design-icon > svg {
+    fill: var(--color-primary-text) !important;
+  }
   /***
    * @copyright Copyright (c) 2017, Magnus Walbeck <mw@mwalbeck.org>
    *
