--- a/css/server.css
+++ b/css/server.css
@@ -942,6 +942,11 @@ table tr.mouseOver td {
   opacity: 1 !important;
 }
 
+.text-menubar .entry-action.is-active:not(.entry-action-item) .material-design-icon > svg,
+.text-menubar button.entry-action__button.is-active .material-design-icon > svg {
+  fill: var(--color-primary-text) !important;
+}
+
 /***
  * @copyright Copyright (c) 2017, Magnus Walbeck <mw@mwalbeck.org>
  *
